[metadata]
name = isoflat
version = 0.0.1
description = OpenStack flat network multiplexing and isolation
description-file = README.rst
author = Ruipeng Zhang
author-email = rxzhang@ualr.edu
license = Apache-2
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = neutron_isoflat

[entry_points]
# neutronclient.extension =

[pbr]
autodoc_index_modules = True
warnerrors = True
