[metadata]
name = isoflat
version = 0.0.1
description = OpenStack flat network multiplexing and isolation
description-file = README.rst
author = Ruipeng Zhang
author-email = rxzhang@ualr.edu
license = Apache-2
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = neutron_isoflat

[entry_points]
neutronclient.extension =
    isoflat = neutron_isoflat.isoflat_client.isoflat
neutron.agent.l2.extensions =
    isoflat = neutron_isoflat.services.isoflat.agents.extensions.isoflat:IsoflatAgentExtension
neutron_isoflat.isoflat.agent_drivers =
    ovs = neutron_isoflat.services.isoflat.agents.drivers.linux.openvswitch:IsoflatOvsDriver
    linuxbridge = neutron_isoflat.services.isoflat.agents.drivers.linux.linuxbridge:IsoflatLinuxBridgeDriver
neutron.service_plugins =
    isoflat = neutron_isoflat.services.isoflat.isoflat_plugin:IsoflatPlugin
neutron.db.alembic_migrations =
    isoflat = neutron_isoflat.db.migration:alembic_migration

[pbr]
autodoc_index_modules = True
warnerrors = True
